<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">新闻浏览器</string>
	<string name="maintab_buttom_1">新闻</string>
	<string name="maintab_buttom_2">关注</string>
	<string name="maintab_buttom_3">热销</string>
	<string name="maintab_buttom_4">天气</string>
	<string name="maintab_buttom_5">百度</string>
	<string name="details_name">新闻详情</string>
	<string name="loadmore_btn">加载更多</string>
    <string name="loadmore_txt">正在加载，请稍候</string>
    <string name="no_news">该栏目下暂时没有新闻</string>
    <string name="no_more_news">该栏目下没有更多新闻</string>
    <string name="load_news_failure">获取新闻失败</string>
</resources>